--- a/index.html
+++ b/index.html
@@ -91,11 +91,21 @@
     const tableCounts = {};
 
     function formatTimestamp(isoString) {
-      if (!isoString || typeof isoString !== "string") return "ー";
-      const date = new Date(isoString);
-      if (isNaN(date.getTime()) || date.getFullYear() === 1970) return "ー";
-      return `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, "0")}-${date.getDate().toString().padStart(2, "0")} ${date.getHours().toString().padStart(2, "0")}:${date.getMinutes().toString().padStart(2, "0")}`;
-    }
+  if (!isoString || typeof isoString !== "string") return "ー";
+  const date = new Date(isoString);
+
+  // ✅ 日本時間に変換
+  const options = {
+    timeZone: "Asia/Tokyo",
+    year: "numeric",
+    month: "2-digit",
+    day: "2-digit",
+    hour: "2-digit",
+    minute: "2-digit"
+  };
+
+  return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
+}
 
     function calculateElapsedTime(isoString) {
       if (!isoString) return "";
