--- a/exit.html
+++ b/exit.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>退店記録</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- Firebase SDK 読み込み（将来用に保持） -->
+  <!-- Firebase SDK（無効化中） -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
-      getFirestore,
-      collection,
-      addDoc,
-      query,
-      where,
-      getDocs
+      getFirestore, collection, addDoc, query, where, getDocs
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -37,7 +33,7 @@
 
       console.log("送信データ（退店）:", { type: "exit", table, timestamp, device });
 
-      // 🔧 Firebase処理は現在無効化中（開発用）
+      // 🔧 保存は現在コメントアウト中
       /*
       try {
         const logsRef = collection(db, "logs");
@@ -75,29 +71,174 @@
   </script>
 
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      height: 100%;
-      width: 100%;
+      color: #333;
+      overflow: hidden;
     }
-    body {
+
+    .loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #fff;
+      flex-direction: column;
     }
-    img {
-      max-width: 100%;
-      max-height: 100%;
+
+    .loading-wrapper {
+      position: relative;
+      width: 220px;
+      margin-bottom: 20px;
+    }
+
+    .loading-bar {
+      width: 100%;
+      height: 20px;
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .exit-img {
+      display: none;
+      width: 140px;
+      height: auto;
+      margin-bottom: 10px;
+      animation: fade-slide 1s ease-in-out;
+    }
+
+    .loader .txt {
+      font-size: 28px;
+      font-weight: bold;
+      color: #2c3e50;
+      display: none;
+      animation: fade-slide 1s ease-in-out;
+    }
+
+    @keyframes fade-slide {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .main-content {
+      display: none;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fade-zoom-in 0.8s ease-in-out;
+    }
+
+    .icon {
+      font-size: 64px;
+      margin-bottom: 20px;
+      animation: bounce 1.5s infinite ease-in-out;
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    @keyframes fade-zoom-in {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
   </style>
 </head>
-
 <body>
-  <div class="image-container">
-    <img src="exit.png" alt="退店画像">
+
+  <!-- 🔄 ローディング画面 -->
+  <div class="loader" id="loader03">
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
+    </div>
+    <img src="exit.png" alt="退店画像" class="exit-img" id="exitImg" />
+    <p class="txt" id="goodbyeText">ありがとうございました！<br>Thank you!</p>
   </div>
+
+  <!-- ✅ 本体 -->
+  <div class="main-content" id="main-content">
+    <div class="container">
+      <div class="icon">👋</div>
+      <h1>ご利用ありがとうございました！</h1>
+      <p>退店が記録されました。</p>
+      <p>Thank you for visiting.<br>Your exit has been recorded.</p>
+    </div>
+  </div>
+
+  <!-- jQuery アニメーション -->
+  <script>
+    $(document).ready(function () {
+      setTimeout(() => {
+        $('#loadingLabel').text("Completion!");
+      }, 3100);
+
+      setTimeout(() => {
+        $('#loadingWrapper').fadeOut(400);
+      }, 3600);
+
+      setTimeout(() => {
+        $('#exitImg').fadeIn(600);
+        $('#goodbyeText').fadeIn(600);
+      }, 4200);
+
+      setTimeout(() => {
+        $('#loader03').fadeOut(600, function () {
+          $('#main-content').fadeIn(600);
+        });
+      }, 6000);
+    });
+  </script>
+
 </body>
 </html>
