--- a/exit.html
+++ b/exit.html
@@ -6,70 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- Firebase SDK（無効化中） -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getFirestore, collection, addDoc, query, where, getDocs
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.addEventListener("load", async () => {
-      const params = new URLSearchParams(window.location.search);
-      const table = params.get("table") || "unknown";
-      const timestamp = new Date().toISOString();
-      const device = navigator.userAgent;
-
-      console.log("送信データ（退店）:", { type: "exit", table, timestamp, device });
-
-      // 🔧 保存は現在コメントアウト中
-      /*
-      try {
-        const logsRef = collection(db, "logs");
-        const q = query(logsRef, where("table", "==", table));
-        const snapshot = await getDocs(q);
-
-        let enterCount = 0;
-        let exitCount = 0;
-
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          if (data.type === "enter") enterCount++;
-          if (data.type === "exit") exitCount++;
-        });
-
-        if (exitCount >= enterCount) {
-          console.warn("このテーブルはすでに退店済みです");
-          window.location.href = "already-exit.html";
-          return;
-        }
-
-        await addDoc(logsRef, {
-          type: "exit",
-          table,
-          timestamp,
-          device
-        });
-        console.log("✅ 退店記録完了");
-
-      } catch (error) {
-        console.error("❌ 退店記録失敗:", error);
-      }
-      */
-    });
-  </script>
-
   <style>
     body {
       margin: 0;
@@ -128,67 +64,19 @@
       color: #555;
     }
 
-    .exit-img {
-      display: none;
-      width: 140px;
-      height: auto;
-      margin-bottom: 10px;
-      animation: fade-slide 1s ease-in-out;
-    }
-
-    .loader .txt {
-      font-size: 28px;
-      font-weight: bold;
-      color: #2c3e50;
-      display: none;
-      animation: fade-slide 1s ease-in-out;
-    }
-
-    @keyframes fade-slide {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
     .main-content {
       display: none;
       height: 100vh;
+      width: 100vw;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
+      background-color: #fff;
     }
 
-    .container {
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      animation: fade-zoom-in 0.8s ease-in-out;
-    }
-
-    .icon {
-      font-size: 64px;
-      margin-bottom: 20px;
-      animation: bounce 1.5s infinite ease-in-out;
-    }
-
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 18px;
-    }
-
-    @keyframes fade-zoom-in {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+    .main-content img {
+      max-width: 100%;
+      max-height: 100%;
     }
   </style>
 </head>
@@ -202,21 +90,14 @@
         <div class="loading-fill"></div>
       </div>
     </div>
-    <img src="exit.png" alt="退店画像" class="exit-img" id="exitImg" />
-    <p class="txt" id="goodbyeText">ありがとうございました！<br>Thank you!</p>
   </div>
 
-  <!-- ✅ 本体 -->
+  <!-- ✅ ローディング後に表示する画像 -->
   <div class="main-content" id="main-content">
-    <div class="container">
-      <div class="icon">👋</div>
-      <h1>ご利用ありがとうございました！</h1>
-      <p>退店が記録されました。</p>
-      <p>Thank you for visiting.<br>Your exit has been recorded.</p>
-    </div>
+    <img src="exit.png" alt="退店画像">
   </div>
 
-  <!-- jQuery アニメーション -->
+  <!-- jQuery アニメーション制御 -->
   <script>
     $(document).ready(function () {
       setTimeout(() => {
@@ -228,15 +109,10 @@
       }, 3600);
 
       setTimeout(() => {
-        $('#exitImg').fadeIn(600);
-        $('#goodbyeText').fadeIn(600);
-      }, 4200);
-
-      setTimeout(() => {
         $('#loader03').fadeOut(600, function () {
           $('#main-content').fadeIn(600);
         });
-      }, 6000);
+      }, 4800);
     });
   </script>
 
