--- a/exit.html
+++ b/exit.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* ✅ グラデ背景をbodyに適用 */
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #333;
       overflow: hidden;
     }
@@ -69,15 +69,31 @@
       height: 100vh;
       width: 100vw;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* ✅ ローディング後も同じ背景を継続 */
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
     }
 
     .main-content img {
       max-width: 100%;
-      max-height: 100%;
+      max-height: 60%;
       animation: fade-in 1s ease-in-out;
+    }
+
+    .message {
+      margin-top: 20px;
+      font-size: 22px;
+      text-align: center;
+      color: #2c3e50;
+      animation: fade-in 1s ease-in-out;
+    }
+
+    .message small {
+      display: block;
+      margin-top: 5px;
+      font-size: 16px;
+      color: #555;
     }
 
     @keyframes fade-in {
@@ -98,12 +114,16 @@
     </div>
   </div>
 
-  <!-- ✅ ローディング後に画像だけ表示 -->
+  <!-- ✅ 本体表示 -->
   <div class="main-content" id="main-content">
     <img src="exit.png" alt="退店画像">
+    <div class="message">
+      レジでお支払いください
+      <small>Please proceed to checkout.</small>
+    </div>
   </div>
 
-  <!-- jQuery アニメーション制御 -->
+  <!-- jQuery アニメーション -->
   <script>
     $(document).ready(function () {
       setTimeout(() => {
