--- a/exit.html
+++ b/exit.html
@@ -6,6 +6,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import {
+      getFirestore, collection, addDoc, query, where, getDocs
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    window.addEventListener("load", async () => {
+      const params = new URLSearchParams(window.location.search);
+      const table = params.get("table") || "unknown";
+      const timestamp = new Date().toISOString();
+      const device = navigator.userAgent;
+
+      try {
+        const logsRef = collection(db, "logs");
+        const q = query(logsRef, where("table", "==", table));
+        const snapshot = await getDocs(q);
+
+        let enterCount = 0;
+        let exitCount = 0;
+
+        snapshot.forEach(doc => {
+          const data = doc.data();
+          if (data.type === "enter") enterCount++;
+          if (data.type === "exit") exitCount++;
+        });
+
+        if (exitCount >= enterCount) {
+          console.warn("このテーブルはすでに退店済みです");
+          window.location.href = "already-exit.html";
+          return;
+        }
+
+        await addDoc(logsRef, {
+          type: "exit",
+          table,
+          timestamp,
+          device
+        });
+        console.log("✅ 退店記録完了");
+
+      } catch (error) {
+        console.error("❌ 退店記録失敗:", error);
+      }
+    });
+  </script>
+
   <style>
     body {
       margin: 0;
@@ -114,7 +173,7 @@
     </div>
   </div>
 
-  <!-- ✅ 本体表示 -->
+  <!-- ✅ ローディング後の表示 -->
   <div class="main-content" id="main-content">
     <img src="exit.png" alt="退店画像">
     <div class="message">
@@ -123,7 +182,7 @@
     </div>
   </div>
 
-  <!-- jQuery アニメーション -->
+  <!-- jQuery アニメーション制御 -->
   <script>
     $(document).ready(function () {
       setTimeout(() => {
