--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>混雑状況</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
       padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
     }
 
     header {
@@ -23,11 +25,12 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      padding: 12px 20px;
     }
 
     .header-title {
       font-size: 1.5em;
+      font-weight: bold;
     }
 
     .header-links {
@@ -38,6 +41,7 @@
     .header-links a {
       color: white;
       text-decoration: none;
+      font-weight: 500;
     }
 
     .header-links a:hover {
@@ -73,7 +77,29 @@
     nav a:hover {
       background-color: #2980b9;
     }
-</style>
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 8px 0;
+    }
+
+    #tables p {
+      font-size: 17px;
+    }
+  </style>
 
   <script>
     const firebaseConfig = {
@@ -87,25 +113,21 @@
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-
     const tableCounts = {};
 
     function formatTimestamp(isoString) {
-  if (!isoString || typeof isoString !== "string") return "ー";
-  const date = new Date(isoString);
-
-  // ✅ 日本時間に変換
-  const options = {
-    timeZone: "Asia/Tokyo",
-    year: "numeric",
-    month: "2-digit",
-    day: "2-digit",
-    hour: "2-digit",
-    minute: "2-digit"
-  };
-
-  return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
-}
+      if (!isoString || typeof isoString !== "string") return "ー";
+      const date = new Date(isoString);
+      const options = {
+        timeZone: "Asia/Tokyo",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+        hour: "2-digit",
+        minute: "2-digit"
+      };
+      return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
+    }
 
     function calculateElapsedTime(isoString) {
       if (!isoString) return "";
@@ -113,11 +135,9 @@
       const now = new Date();
       const diffMs = now - start;
       if (diffMs < 0) return "";
-
       const minutes = Math.floor(diffMs / 60000);
       const hours = Math.floor(minutes / 60);
       const remainingMinutes = minutes % 60;
-
       return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
     }
 
@@ -140,7 +160,7 @@
       let entries = 0;
       let exits = 0;
 
-      for (let i = 1; i <= 10; i++) {
+      for (let i = 1; i <= 7; i++) {
         tableCounts[i.toString()] = {
           enter: 0,
           exit: 0,
@@ -152,7 +172,6 @@
         const data = doc.data();
         const table = data.table;
         const timestamp = data.timestamp;
-
         if (!table || !timestamp) return;
 
         if (data.type === "enter") entries++;
@@ -174,19 +193,16 @@
         }
       });
 
-      const current = entries - exits;
-      document.getElementById("count").textContent = current;
+      document.getElementById("count").textContent = entries - exits;
       document.getElementById("entries").textContent = entries;
       document.getElementById("exits").textContent = exits;
 
-      updateTableDisplays(); // 初回表示
+      updateTableDisplays();
     }
 
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
-
-      // ⏱ 毎分経過時間を再描画
-      setInterval(updateTableDisplays, 60 * 1000);
+      setInterval(updateTableDisplays, 60000); // 毎分更新
     };
   </script>
 </head>
@@ -200,16 +216,16 @@
         <a href="#">ログアウト</a>
       </div>
     </div>
-   
     <nav>
-     <a href="index.html" class="active">ホーム</a>
-    <a href="map.html">店内マップ</a>
-    <a href="log.html">ログ一覧</a>
+      <a href="index.html" class="active">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="log.html">ログ一覧</a>
     </nav>
   </header>
 
   <main>
-    <section style="padding: 20px;">
+    <section>
+      <h2>全体状況</h2>
       <p>現在の入店者数: <span id="count">読み込み中...</span></p>
       <p>累計入店数: <span id="entries">-</span></p>
       <p>累計退店数: <span id="exits">-</span></p>
@@ -224,6 +240,7 @@
       <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
       <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
       <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+
     </section>
   </main>
 </body>
