--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>混雑状況</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
@@ -14,6 +15,56 @@
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
+      overflow-x: hidden;
+    }
+
+    /* 🔄 ローディング画面 */
+    .loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .loading-wrapper {
+      position: relative;
+      width: 220px;
+      margin-bottom: 20px;
+    }
+
+    .loading-bar {
+      width: 100%;
+      height: 20px;
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
     }
 
     header {
@@ -82,6 +133,7 @@
       max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
+      display: none;
     }
 
     h2 {
@@ -202,12 +254,38 @@
 
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000); // 毎分更新
+      setInterval(updateTableDisplays, 60000);
+
+      // ✅ ローディングバー制御
+      setTimeout(() => {
+        $('#loadingLabel').text("Completion!");
+      }, 3100);
+
+      setTimeout(() => {
+        $('#loadingWrapper').fadeOut(400);
+      }, 3600);
+
+      setTimeout(() => {
+        $('#loader03').fadeOut(600, function () {
+          $('main').fadeIn(600);
+        });
+      }, 4800);
     };
   </script>
 </head>
 
 <body>
+  <!-- 🔄 ローディング -->
+  <div class="loader" id="loader03">
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ✅ 本体 -->
   <header>
     <div class="header-bar">
       <div class="header-title">店内管理システム</div>
@@ -240,7 +318,6 @@
       <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
       <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
       <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
-
     </section>
   </main>
 </body>
