--- a/admit.html
+++ b/admit.html
@@ -22,21 +22,33 @@
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+      max-width: 90%;
     }
     .message h1 {
       font-size: 28px;
       color: #2c3e50;
+      margin-bottom: 10px;
     }
     .message p {
       font-size: 18px;
       color: #34495e;
+      margin: 6px 0;
+    }
+    .icon {
+      font-size: 48px;
+      margin-bottom: 16px;
     }
   </style>
 </head>
 <body>
   <div class="message">
+    <div class="icon">✅</div>
     <h1>あなたの番です！</h1>
-    <p>ご来店ありがとうございます。<br>すぐにご入店ください。</p>
+    <p>ご来店ありがとうございます。</p>
+    <p>すぐにご入店ください。</p>
+    <br>
+    <p><strong>It's your turn!</strong></p>
+    <p>Please enter the store now.</p>
   </div>
 </body>
 </html>
