--- a/expired.html
+++ b/expired.html
@@ -1,4 +1,3 @@
-<!-- expired.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -22,21 +21,32 @@
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+      max-width: 90%;
     }
     .message h1 {
       font-size: 26px;
       color: #c0392b;
+      margin-bottom: 10px;
     }
     .message p {
       font-size: 17px;
       color: #555;
+      margin: 6px 0;
+    }
+    .icon {
+      font-size: 48px;
+      margin-bottom: 16px;
     }
   </style>
 </head>
 <body>
   <div class="message">
+    <div class="icon">⚠️</div>
     <h1>キャンセルされました</h1>
     <p>時間内に入店が確認できなかったため、<br>順番はキャンセルされました。</p>
+    <br>
+    <p><strong>Your reservation has been canceled.</strong></p>
+    <p>You did not enter the store within the required time.</p>
   </div>
 </body>
 </html>
