--- a/wait.html
+++ b/wait.html
@@ -179,7 +179,7 @@
         // 🔁 予想待ち時間 = 人数×30 + 基本30分
         const estimated = (peopleAhead * 30) + 30;
 
-        document.getElementById("ticketNumber").textContent = `番号札: ${myIndex}\nTicket No. ${myIndex}`;
+        document.getElementById("ticketNumber").textContent = `番号札:  No. ${myIndex}`;
         document.getElementById("peopleAhead").textContent = peopleAhead;
         document.getElementById("estimatedTime").textContent = `${estimated}分`;
       });
