--- a/admin.html
+++ b/admin.html
@@ -73,9 +73,11 @@
 </head>
 <body>
   <div class="loader" id="loader">
-    <p>Now Loading...</p>
-    <div class="loading-bar">
-      <div class="loading-fill"></div>
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
     </div>
   </div>
 
