--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -16,55 +15,6 @@
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
       overflow-x: hidden;
-    }
-
-    /* 🔄 ローディング画面 */
-    .loader {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      z-index: 9999;
-      top: 0;
-      left: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    .loading-wrapper {
-      position: relative;
-      width: 220px;
-      margin-bottom: 20px;
-    }
-
-    .loading-bar {
-      width: 100%;
-      height: 20px;
-      border: 2px solid #999;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    .loading-fill {
-      height: 100%;
-      width: 0%;
-      background-color: #7baaf7;
-      animation: loading-animation 3s forwards;
-    }
-
-    @keyframes loading-animation {
-      0% { width: 0%; }
-      100% { width: 100%; }
-    }
-
-    .loading-text {
-      position: absolute;
-      top: -24px;
-      right: 0;
-      font-size: 14px;
-      color: #555;
     }
 
     header {
@@ -101,7 +51,7 @@
 
     nav {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(4, 1fr);
       background-color: #3498db;
       text-align: center;
       border-top: 1px solid #fff;
@@ -133,7 +83,6 @@
       max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
-      display: none;
     }
 
     h2 {
@@ -232,10 +181,7 @@
         if (tableCounts[table]) {
           if (data.type === "enter") {
             tableCounts[table].enter++;
-            if (
-              !tableCounts[table].lastEnterTime ||
-              new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)
-            ) {
+            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
               tableCounts[table].lastEnterTime = timestamp;
             }
           }
@@ -255,37 +201,10 @@
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
-
-      // ✅ ローディングバー制御
-      setTimeout(() => {
-        $('#loadingLabel').text("Completion!");
-      }, 3100);
-
-      setTimeout(() => {
-        $('#loadingWrapper').fadeOut(400);
-      }, 3600);
-
-      setTimeout(() => {
-        $('#loader03').fadeOut(600, function () {
-          $('main').fadeIn(600);
-        });
-      }, 4800);
     };
   </script>
 </head>
-
 <body>
-  <!-- 🔄 ローディング -->
-  <div class="loader" id="loader03">
-    <div class="loading-wrapper" id="loadingWrapper">
-      <div class="loading-text" id="loadingLabel">Now Loading...</div>
-      <div class="loading-bar">
-        <div class="loading-fill"></div>
-      </div>
-    </div>
-  </div>
-
-  <!-- ✅ 本体 -->
   <header>
     <div class="header-bar">
       <div class="header-title">店内管理システム</div>
@@ -298,6 +217,7 @@
       <a href="index.html" class="active">ホーム</a>
       <a href="map.html">店内マップ</a>
       <a href="log.html">ログ一覧</a>
+      <a href="admin.html">待ち管理</a>
     </nav>
   </header>
 
