--- a/index.html
+++ b/index.html
@@ -17,6 +17,55 @@
       overflow-x: hidden;
     }
 
+    /* 🔄 ローディング画面 */
+    .loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .loading-wrapper {
+      position: relative;
+      width: 220px;
+      margin-bottom: 20px;
+    }
+
+    .loading-bar {
+      width: 100%;
+      height: 20px;
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
+    }
+
     header {
       background-color: #2c3e50;
       color: white;
@@ -83,6 +132,7 @@
       max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
+      display: none;
     }
 
     h2 {
@@ -201,10 +251,33 @@
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
+
+      // ✅ ローディングバー制御（indexのみ）
+      setTimeout(() => {
+        document.getElementById("loadingLabel").textContent = "Completion!";
+      }, 3100);
+      setTimeout(() => {
+        document.getElementById("loadingWrapper").style.display = "none";
+      }, 3600);
+      setTimeout(() => {
+        document.getElementById("loader03").style.display = "none";
+        document.querySelector("main").style.display = "block";
+      }, 4800);
     };
   </script>
 </head>
 <body>
+  <!-- 🔄 ローディング -->
+  <div class="loader" id="loader03">
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ✅ 本体 -->
   <header>
     <div class="header-bar">
       <div class="header-title">店内管理システム</div>
