--- a/admin.html
+++ b/admin.html
@@ -106,11 +106,11 @@
       });
     }
 
-    window.onload = () => {
-      setTimeout(() => {
-        document.getElementById("mainTitle").style.display = "block";
-        renderQueue();
-      };
-  </script>
+    <script>
+  window.onload = () => {
+    document.getElementById("mainTitle").style.display = "block";
+    renderQueue();
+  };
+</script>
 </body>
 </html>
