--- a/wait.html
+++ b/wait.html
@@ -191,7 +191,7 @@
         document.getElementById("estimatedTime").innerHTML = `
           ${estimated}分<br>
           <div style="margin-top: 10px; font-size: 14px; color: #c0392b;">
-            ※5分以内に来店しない場合、自動キャンセルされます<br>
+            <br>※5分以内に来店しない場合、自動キャンセルされます<br>
             <span style="font-size:13px;">*Your spot will be automatically cancelled if you don't arrive within 5 minutes.</span>
           </div>
         `;
