--- a/map.html
+++ b/map.html
@@ -12,6 +12,7 @@
       font-family: sans-serif;
       margin: 0;
       padding: 0;
+      background: linear-gradient(to right, #c2e9fb, #a1c4fd); /* 背景を追加 */
     }
 
     header {
@@ -78,12 +79,14 @@
       position: relative;
       width: 100%;
       max-width: 800px;
-      margin: 0 auto;
+      margin: 30px auto;
     }
 
     .map-image {
       width: 100%;
       display: block;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     .table-marker {
@@ -191,12 +194,12 @@
 
     <!-- テーブルごとのマーカー -->
     <div id="marker-1" class="table-marker" style="top: 17%; left: 11%;">読み込み中...</div>
-　　<div id="marker-2" class="table-marker" style="top: 18%; left: 80%;">読み込み中...</div>
-　　<div id="marker-3" class="table-marker" style="top: 45%; left: 11%;">読み込み中...</div>
-　　<div id="marker-4" class="table-marker" style="top: 46%; left: 80%;">読み込み中...</div>
-　　<div id="marker-5" class="table-marker" style="top: 74%; left: 11%;">読み込み中...</div>
-　　<div id="marker-6" class="table-marker" style="top: 74%; left: 46%;">読み込み中...</div>
-　　<div id="marker-7" class="table-marker" style="top: 74%; left: 80%;">読み込み中...</div>
+    <div id="marker-2" class="table-marker" style="top: 18%; left: 80%;">読み込み中...</div>
+    <div id="marker-3" class="table-marker" style="top: 45%; left: 11%;">読み込み中...</div>
+    <div id="marker-4" class="table-marker" style="top: 46%; left: 80%;">読み込み中...</div>
+    <div id="marker-5" class="table-marker" style="top: 74%; left: 11%;">読み込み中...</div>
+    <div id="marker-6" class="table-marker" style="top: 74%; left: 46%;">読み込み中...</div>
+    <div id="marker-7" class="table-marker" style="top: 74%; left: 80%;">読み込み中...</div>
   </main>
 </body>
 </html>
