--- a/map.html
+++ b/map.html
@@ -186,6 +186,7 @@
       <a href="index.html">ホーム</a>
       <a href="map.html" class="active">店内マップ</a>
       <a href="log.html">ログ一覧</a>
+      <a href="log.html">待ち管理</a>      
     </nav>
   </header>
 
