--- a/map.html
+++ b/map.html
@@ -47,7 +47,7 @@
 
     nav {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-auto-flow: column;
       background-color: #3498db;
       text-align: center;
       border-top: 1px solid #fff;
